Fixed comments from cr